fix overflow issue on code snippets

--- a/_dev/sass/sections/_post.sass
+++ b/_dev/sass/sections/_post.sass
@@ -108,6 +108,7 @@
 .post__body__content div[class*=language-]
 
     margin-bottom: 1em
+    overflow-x: scroll
 
     .highlight
         padding: 1em
